# firmware-pi-rp2040

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  README.md
edge-impulse-sdk/classifier/: ei_model_types.h  ei_performance_calibration.h  ei_run_classifier.h  ei_run_dsp.h
edge-impulse-sdk/dsp/: memory.hpp  numpy.hpp  numpy_types.h
edge-impulse-sdk/dsp/speechpy/: feature.hpp  functions.hpp
edge-impulse-sdk/porting/raspberry/: ei_classifier_porting.cpp
edge-impulse/inference/: ei_run_audio_impulse.cpp  ei_run_fusion_impulse.cpp
edge-impulse/ingestion-sdk-c/: ei_config.h  ei_run_impulse.cpp  ei_sampler.cpp  ei_sampler.h  sensor_aq_mbedtls_hs256.cpp  sensor_aq_mbedtls_hs256.h
edge-impulse/ingestion-sdk-platform/raspberry-rp2040/: ei_at_handlers.cpp  ei_at_handlers.h  ei_device_raspberry_rp2040.cpp  ei_device_raspberry_rp2040.h  ei_flash_memory.cpp  ei_flash_memory.h  ei_main.cpp  ei_main.h  ei_rp2040_fs_commands.cpp  ei_rp2040_fs_commands.h
edge-impulse/ingestion-sdk-platform/sensors/: ei_analogsensor.cpp  ei_dht11sensor.cpp  ei_dht11sensor.h  ei_fusion_sensors_config.h  ei_inertialsensor.cpp  ei_inertialsensor.h  ei_microphone.cpp  ei_microphone.h  ei_motionsensor.cpp  ei_motionsensor.h  ei_ultrasonicsensor.cpp  ei_ultrasonicsensor.h
edge-impulse/mbedtls_hmac_sha256_sw/: ei_mbedtls_md.h
firmware-sdk/: at_base64_lib.cpp  ei_device_info_lib.h  ei_device_memory.h  ei_fusion.cpp
firmware-sdk/jpeg/: encode_as_jpg.h
model-parameters/: anomaly_clusters.h  anomaly_types.h  dsp_blocks.h  model_metadata.h  model_variables.h
src/: main.cpp
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
